# indiemotion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
docs/: Delegates.md
examples/python/: simple_example.py
idmserver/: main.cpp
include/: beast.hpp  net.hpp
include/indiemotion/: callbacks.hpp  connection.hpp  context.hpp  controller.hpp  delegates.hpp  engine.hpp  error.hpp  indiemotion.hpp  logging.hpp  message_gen.hpp  messaging.hpp  runtime.hpp  server.hpp  server_runtime.hpp
include/indiemotion-protobuf/: messages.pb.cc  messages.pb.h  payloads.pb.cc  payloads.pb.h
include/indiemotion-python/: converters.hpp  delegate.hpp  server.hpp
include/indiemotion/context/: motion.hpp  scene.hpp
include/indiemotion/controllers/: controller.hpp  debug.hpp  session.hpp
include/indiemotion/delegate/: motion.hpp  scene.hpp  server.hpp  session.hpp
include/indiemotion/impl/: server_runtime.hpp
include/indiemotion/motion/: xform.hpp
include/indiemotion/net/: message.hpp
include/indiemotion/proto/: messages.pb.cc  messages.pb.h  messages.proto
include/indiemotion/services/: scene_service.hpp
indiemotion/: CMakeLists.txt
indiemotion-python/: CMakeLists.txt
indiemotion-python/indiemotion-py/: base.hpp  context.cpp  context.hpp  converters.hpp  delegate.cpp  delegate.hpp  indiemotion.cpp  server.hpp
indiemotion-python/tests/: test_pydelegate.cpp
indiemotion-python/tests/pyindiemotion/: test_context_delegates.py
indiemotion-python/tests/python/: test_context.py  test_delegates.py  test_server.py
indiemotion/include/indiemotion/: debug.hpp  options.hpp  service.hpp
indiemotion/include/indiemotion/context/: session.hpp
indiemotion/include/indiemotion/delegate/: scene.hpp  server.hpp
indiemotion/include/indiemotion/scene/: camera.hpp
indiemotion/include/indiemotion/server/: connection.hpp  server.hpp
indiemotion/include/indiemotion/services/: motion_service.hpp  scene_service.hpp  session_service.hpp
indiemotion/tests/: CmakeLists.txt  test_service.cpp
indiemotionpb/: CMakeLists.txt  payloads.proto
public/: index.html
source/: CMakeLists.txt
source/indiemotion/: indiemotion.cpp
source/indiemotion-debug-server/: main.cpp
source/indiemotion-python/: python.cpp
source/indiemotion/include/indiemotion/scene/: camera.hpp
source/pyindiemotion/: CMakeLists.txt  hello_ext.cpp  pyindiemotion.cpp
src/: context.cpp  engine.cpp  test_context.cpp
src/controllers/: debug.cpp  session.cpp
src/imserver/: callbacks.hpp  main.cpp
src/messages/: messaging.cpp
src/mgen/: main.cpp
src/server/: connection.cpp  http_session.cpp  http_session.hpp  message_gen.cpp  server.cpp  server_runtime.cpp  websocket.cpp  websocket.hpp
tests/: CmakeLists.txt
tests/indiemotion/: CMakeLists.txt
tests/indiemotion-python/: CMakeLists.txt
tests/indiemotion-python/tests/: test_delegates.py
tests/pyindiemotion/: test_context.py
